--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,7 @@
 <main class="main">
   <div class="content">
-    <app-block class="top left"></app-block>
-    <app-block class="top right"></app-block>
-    <app-block class="bottom left"></app-block>
-    <app-block class="bottom right"></app-block>
+    <app-admin></app-admin>
   </div>
 </main>
-
-
 
 <router-outlet />
